adjust docs, config files

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# Anthropic API key for the Claude agent
 ANTHROPIC_API_KEY=your-api-key-here
+
+# Base URL of the AIO Sandbox (default: http://localhost:8081)
+SANDBOX_URL=http://localhost:8081
